# ocaml-fet

./: .gitignore  README.md  dune  dune-project  fet.opam  shell.nix
.github/workflows/: test.yml
gtk/: dsl.ml  dune  main.ml  optionalDate.ml
lib/: activities.ml  activities.mli  activity_tags.ml  building.ml  building.mli  class.ml  class.mli  day.ml  dune  no_plus.ml  no_plus.mli  plus.ml  plus.mli  room.ml  room.mli  rooms_and_buildings.ml  statistics_activities.ml  students.ml  students.mli  subjects.ml  teacher.ml  teacher.mli  teachers.ml  timetable.ml  utils.ml
po/fr/LC_MESSAGES/: dune  ical_of_timetable.pot
spec/: dune  programGettext.ml  spec.ml
tests/: activities.csv  activity_tags.csv  dune  export.ml  export.t  ical.t  import.ml  import.t  rooms_and_buildings.csv  statistics_activities.csv  students.csv  subjects.csv  teachers.csv  timetable.csv
wrapper/: dune  test.ml
