opam-version: "2.0"
name: "fet"
version: "dev"
maintainer: "Guillaume Huysmans <ghuysmans99@gmail.com>"
authors: "Guillaume Huysmans <ghuysmans99@gmail.com>"
homepage: "https://github.com/ghuysmans/ocaml-fet/"
bug-reports: "https://github.com/ghuysmans/ocaml-fet/issues"
dev-repo: "git+https://github.com/ghuysmans/ocaml-fet/"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {>= "2.7"}
  "csv"
  "icalendar"
  "cmdliner"
  "mdx"
  "gettext"
]
synopsis: "FET CSV reader/writer and iCalendar generator"
